--- a/localizationSample/resources/en.lproj/Main.strings
+++ b/localizationSample/resources/en.lproj/Main.strings
@@ -1,1 +1,9 @@
 
+/* Class = "UILabel"; text = "Text"; ObjectID = "GDi-bM-t3x"; */
+"GDi-bM-t3x.text" = "Text";
+
+/* Class = "UILabel"; text = "Language"; ObjectID = "axY-mE-m4L"; */
+"axY-mE-m4L.text" = "Language";
+
+/* Class = "UILabel"; text = "Currency"; ObjectID = "eec-5t-oa3"; */
+"eec-5t-oa3.text" = "Currency";
